
** New option --include FILE.h to add a #include in the generated C file.
   This option can typically be used to force the C compiler to check static
   calls to externals. The files are put into quotes, unless they start by
   '<'. Quoted files are expected to have absolute paths, as the C compiler
   is called in a temp directory instead of the project directory.

** output of unlimited errors may be requested by -fmax-errors=0,
   to stop compiliation at first error use -Wfatal-errors
** default value for -fmax-errors was changed from 128 to 20

** New option -fdiagnostics-absolute-paths to print the full path of
   a file for diagnostics; this flag can be activated if your editor and
   build system do not correctly work together to locate files from
   diagnostic output

** New option -fdefault-file-colseq to specify the default
   file collating sequence

** New options -M, -MP, -MG, -MD and -MQ to output COPY dependencies
   to a file (see "Dependencies options" in the GnuCOBOL manual)

* More notable changes

** execution times were significantly reduced for the following:
   comparison between a numeric DISPLAY variable to another or to a
   literal comparison between numeric DISPLAY or BCD variable to zero
   INSPECT CONVERTING (and "simple" INSPECT REPLACING), in general and
   especially if both from and to are constants

** optimization of the two-pass preprocessing step of cobc: memory usage
   and performance should be back close to the ones of 3.1.

* Changes in the COBOL runtime

** more substitutions in environment variables: $f for executable filename,
   $b for executable basename, $d for date in YYYYMMDD format, $t for time
   in HHMMSS format (before, only $$ was available for pid)

* New build features

** configure now uses pkg-config/ncurses-config to search for ncurses and
   honors NCURSES_LIBS and NCURSES_CFLAGS

** configure now checks for iconv and accepts --with-iconv/--without-iconv;