@@ -1074,7 +1074,7 @@ AT_CLEANUP
 
 
 AT_SETUP([check include header file])
-#AT_KEYWORDS([cobc copy])
+#AT_KEYWORDS([cobc copy include imp])
 
 AT_DATA([filec.h], [
 /* COB_EXT_IMPORT will be defined by libcob.h up-front */
@@ -1149,6 +1149,20 @@ AT_CHECK([$COMPILE_MODULE -Wno-unfinished --copy "f.copy" -fstatic-call prog2.co
   # Previous test "failed" --> retry with import library
   AT_CHECK([$COMPILE_MODULE -Wno-unfinished --copy "f.copy" -fstatic-call -L. -lfilec prog2.cob -o prog2c], [0], ignore, ignore)]
 )
+
+AT_DATA([prog3.cob], [
+       >> IMP INCLUDE "file.h"
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01 long USAGE BINARY-C-LONG.
+       PROCEDURE        DIVISION.
+           CALL "f" USING "Hello" BY VALUE long RETURNING NOTHING.
+])
+
+# static build with correct function signature
+# AT_CHECK([$COBC -m -I . -fstatic-call prog3.cob], [0], [], [])
 
 AT_CLEANUP
 
